--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -44,4 +44,5 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           directory: "."
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
+          branch: master
