CI: Persist credentials

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Print commit id, message and tag
         run: |
