CI: Add single quote

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - 'master'
     paths:
-      - README.md
-      - !generated/**
+      - 'README.md'
+      - '!generated/**'
 
   workflow_dispatch:
 
