--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -16,7 +16,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-manual:
+  generate-json:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
